--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,39 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  /**
+   * COLORS
+   */
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* background color */
+  --bg-dark-blue: #001524;
+  --bg-orange: #cf5c36;
+  --bg-pale-blue: #7ea8be;
+  --bg-pale-yellow: #efc88b;
+  --bg-green: #588157;
+  --bg-light-grey: #efefef;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  /*gradient color*/
+  --gradient-1: linear-gradient(
+    90deg,
+    hsla(205, 100%, 7%, 1) 0%,
+    hsla(202, 28%, 34%, 1) 60%,
+    hsla(201, 33%, 62%, 1) 100%
+  );
+
+  /*text color */
+  --text-light-grey: ##c9c9c9;
+  --text-white: white;
+  --text-black: black;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
+}
+
+.homepage-background {
   min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  width: 100%;
+  background-image: url("./assets/wave-haikei.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
