--- a/src/components/Signup_Login/Signup_Login.css
+++ b/src/components/Signup_Login/Signup_Login.css
@@ -11,7 +11,7 @@ body {
   background: linear-gradient(180deg, #070807 50%, #99d 50%);
 } */
 ::selection {
-  background: #001524;
+  background: #7ea8be;
   color: #fff;
 }
 .wrapper {
@@ -43,6 +43,7 @@ body {
   justify-content: space-between;
   border: 1px solid lightgrey;
   border-radius: 15px;
+  box-sizing: border-box;
 }
 .slide-controls .slide {
   height: 100%;
@@ -103,12 +104,13 @@ input[type="radio"] {
   transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 .form-inner form .field {
-  height: 50px;
+  position: relative;
+  height: fit-content;
   width: 100%;
   margin-top: 20px;
 }
 .form-inner form .field input {
-  height: 100%;
+  height: 50px;
   width: 100%;
   outline: none;
   padding-left: 15px;
@@ -117,9 +119,10 @@ input[type="radio"] {
   border-bottom-width: 2px;
   font-size: 17px;
   transition: all 0.3s ease;
+  box-sizing: border-box;
 }
 .form-inner form .field input:focus {
-  border-color: #1a75ff;
+  border-color: #7ea8be;
   /* box-shadow: inset 0 0 3px #fb6aae; */
 }
 .form-inner form .field input::placeholder {
@@ -127,8 +130,19 @@ input[type="radio"] {
   transition: all 0.3s ease;
 }
 form .field input:focus::placeholder {
-  color: #1a75ff;
+  color: #7ea8be;
 }
+
+.form-inner form .first-name,
+.form-inner form .last-name {
+  display: inline-block;
+  width: 48%;
+}
+
+.form-inner form .first-name {
+  margin-right: 4%;
+}
+
 .form-inner form .pass-link {
   margin-top: 5px;
 }
@@ -138,7 +152,7 @@ form .field input:focus::placeholder {
 }
 .form-inner form .pass-link a,
 .form-inner form .signup-link a {
-  color: #1a75ff;
+  color: #7ea8be;
   text-decoration: none;
 }
 .form-inner form .pass-link a:hover,
@@ -165,7 +179,7 @@ form .btn:hover .btn-layer {
   left: 0;
 }
 form .btn button[type="submit"] {
-  height: 100%;
+  height: 50px;
   width: 100%;
   z-index: 1;
   position: relative;
@@ -177,4 +191,20 @@ form .btn button[type="submit"] {
   font-size: 20px;
   font-weight: 500;
   cursor: pointer;
+}
+
+.form-inner form .field .error-message {
+  color: #d93025;
+  margin-top: 5px;
+}
+
+.password-toggle {
+  position: absolute;
+  right: 13px;
+  top: 50%;
+  transform: translateY(-50%);
+  border: none;
+  background: none;
+  cursor: pointer;
+  color: #666;
 }
