--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -1,6 +1,23 @@
 article {
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+}
+
+body.blur > #root > article > *:not(.popup-container) {
+  filter: blur(5px);
+}
+
+.popup-styling {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 390px;
+  background: #fff;
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
 }
