--- a/src/components/Signup_Login/Signup_Login.css
+++ b/src/components/Signup_Login/Signup_Login.css
@@ -16,11 +16,13 @@ body {
 }
 .wrapper {
   overflow: hidden;
-  max-width: 390px;
+  max-width: 320px;
+  width: 100%;
   background: #fff;
-  padding: 30px;
+  padding: 20px;
   border-radius: 15px;
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
 }
 .wrapper .title-text {
   display: flex;
@@ -28,7 +30,7 @@ body {
 }
 .wrapper .title {
   width: 50%;
-  font-size: 35px;
+  font-size: 30px;
   font-weight: 600;
   text-align: center;
   transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
