--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -25,22 +25,60 @@
   font-size: 32px;
 }
 
-body.blur > #root > article > *:not(.popup-container) {
-  filter: blur(5px);
+body.blur > #root > article {
+  position: relative; /* Ensure the pseudo-element is positioned relative to the article */
 }
 
-.popup-container {
+body.blur > #root > article::before {
+  content: "";
   position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 0; /* Place the pseudo-element behind the article content */
+  background-image: inherit; /* Inherit the background image from the article */
+  background-size: cover;
+  filter: blur(10px); /* Apply the blur effect */
+}
+
+body.blur > #root > article > :not(.popup-container) {
+  filter: blur(
+    10px
+  ); /* Apply the blur effect to the article's children excluding .popup-container */
 }
 
 .popup-styling {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 390px;
+  max-width: 240px;
+  width: 100%;
+  max-height: 300px;
+  height: 100%;
   background: #fff;
   padding: 30px;
   border-radius: 15px;
-  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.6);
+  box-sizing: border-box;
+}
+
+.popup {
+  height: 100%;
+}
+.popup-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  row-gap: 150px;
+  text-align: center;
+  font-size: 18px;
+}
+
+.popup-content .close {
+  background-color: green;
+  color: white;
+  padding: 10px 50px;
+  border: none;
+  border-radius: 20px;
 }
