--- a/src/components/Signup_Login/Signup_Login.css
+++ b/src/components/Signup_Login/Signup_Login.css
@@ -23,6 +23,8 @@ body {
   border-radius: 15px;
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
+  margin-top: 45px;
+  margin-bottom: 30px;
 }
 .wrapper .title-text {
   display: flex;
